fix: html with whitespaces and quotes

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ li{
     max-width: 1000px;
 }
 
-.aside_container{
+.asideContainer{
     width: 20%;
     padding: 20px;
     display: flex;
@@ -49,7 +49,7 @@ li{
     
 }
 
-.main_container{
+.mainContainer{
         width: 80%;
         padding: 20px;
         display: flex;
@@ -77,7 +77,7 @@ footer{
     background-color: rgb(61, 221, 221);
 }
 
-.footer_container{
+.footerContainer{
     display: flex;
     padding: 0px 50px;
 }
